[package]
name = "mixlayer-handlebars"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
handlebars = "5.0.0"
serde = "1.0.195"
serde_json = "1.0.111"
valence = { path = "/Users/zackangelo/git/valence/lib" }
valence-runtime-ffi = { path = "/Users/zackangelo/git/valence/runtime-ffi" }
